--- a/Portafolio/appsettings.json
+++ b/Portafolio/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "CONFIGURACIONES_EMAIL": {
+    "HOST":"smtp.gmail.com",
+    "PUERTO": 587
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
